# openai-base-proxy

./: .env.example  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
docs/: README.es.md  README.ja.md  README.zh-CN.md
src/: lib.rs  main.rs
tests/: proxy.rs
